--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "author": "Ubaidillah Ariq, Fikri Ihsan, Gibran Darmawan",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.3"
   }
 }
