--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "Ubaidillah Ariq, Fikri Ihsan, Gibran Darmawan",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3"
   }
 }
