implement jwt authentication Co-authored-by: Gibran Darmawan <13520061@std.stei.itb.ac.id> Co-authored-by: fikri ihsan <13520148@std.stei.itb.ac.id>

--- a/src/.env
+++ b/src/.env
@@ -6,3 +6,4 @@ DB_USER=root
 DB_PASS=dbadmin123
 PASSWORD_SECRET_TOKEN=vOVH6sdmpNWjRRIqCc7rdxs01lwHzfr3
 PASSWORD_SECRET_IV=mpNWjRRIqCc7rdxs
+JWT_SECRET_TOKEN=goK!pusp6ThEdURUtRenOwUhAsWUCLheBazl!uJLPlS8EbreWLdrupIwabRAsiBu
