--- a/src/.env
+++ b/src/.env
@@ -7,3 +7,4 @@ DB_PASS=dbadmin123
 PASSWORD_SECRET_TOKEN=vOVH6sdmpNWjRRIqCc7rdxs01lwHzfr3
 PASSWORD_SECRET_IV=mpNWjRRIqCc7rdxs
 JWT_SECRET_TOKEN=goK!pusp6ThEdURUtRenOwUhAsWUCLheBazl!uJLPlS8EbreWLdrupIwabRAsiBu
+REST_API_KEY="REST_KEY_SECRET"
